# markov_decision_making

./: env.sh
mdm_example/: CMakeLists.txt
mdm_example/maps/: 4x4_map.pgm
mdm_example/src/: demo_control_layer.cpp
mdm_kuri_example/: CMakeLists.txt  package.xml
mdm_kuri_example/config/: 1x3_problem.yaml  3x3_problem.yaml  4x4_problem.yaml  6x5_danFun_v1_problem.yaml  6x5_danFun_v2_problem.yaml  6x5_danger_v1_problem.yaml  6x5_danger_v2_problem.yaml  6x5_priortiesObj_v1.yaml  6x5_priortiesObj_v2_1.yaml  6x5_priortiesObj_v2_2.yaml  6x5_problem.yaml  6x5_randomDandV_v1_problem.yaml  6x5_usingFASTparameters_v1.yaml  6x5_usingTimewithClassical_v1.yaml  6x5_v3_1_problem.yaml  6x5_v3_2_problem.yaml  6x5_v3_3_problem.yaml  6x5_v3_problem.yaml
mdm_kuri_example/launch/: kuri_example.launch
mdm_kuri_example/src/: 3x3states  4x4_states_2ag  6x4states  MAHRC_1X3_V1_2.cpp  README.md  action_layer.cpp  calculateDistace.m  calculateDistance.m  calculateSumRewards_v1.m  calculateSumRewards_v1_1.m  calculateSumRewards_v1_2.m  clearDangerReward.m  control_layer.cpp  dangerRewardFun.m  dangerRewardFun_v0.m  dangerRewardFun_v1.m  distancetoDangerReward.m  energyRewardFun.m  energyRewardFun_v1.m  expandNode.m  extractVictimReward.m  firefighter_demo_test.cpp  mahrc.cpp  observation_layer.cpp  options.m  options_1x3.m  plotfigures.m  predicates.cpp  rewardsBasedonPriority_v1.m  rewardsController_v1.m  searchAndRescue_1x3_v1_1.m  searchAndRescue_1x3_v1_2.m  searchAndRescue_1x3_v1_3.m  searchAndRescue_1x3_v1_4.m  searchAndRescue_1x3_v1_5.m  searchAndRescue_1x3_v1_5_t.m  searchAndRescue_1x3_v1_6.m  searchAndRescue_1x3_v1_7.m  searchAndRescue_1x3_v1_8.m  searchAndRescue_1x3_v1_9.m  (+37 more)
mdm_library/: CMakeLists.txt
mdm_library/CMakeModules/: FindMADP.cmake
mdm_library/include/mdm_library/: common_defs.h  controller_decpomdp.h  controller_event_decpomdp.h  f_observation_layer.h
mdm_library/src/: controller_decpomdp.cpp  controller_event_decpomdp.cpp  decpomdp_loader.cpp  fake_observation_layer.cpp
predicate_manager/src/: predicate_manager.cpp
