<?xml version="1.0"?>
<package>
  <name>mdm_kuri_example</name>
  <version>0.1.2</version>
  <description>An example for multi-agent DecPOMDP</description>

  <maintainer email="tarek.taha@kustar.ac.ae">Tarek Taha</maintainer>

  <license>LGPLv3</license>

  <author email="tarek.taha@kustar.ac.ae">Tarek Taha</author>
  <url>http://kuri.kustar.ac.ae</url>
  <build_depend>mdm_library</build_depend>
  <build_depend>predicate_manager</build_depend>
  <build_depend>topological_tools</build_depend>

  <run_depend>mdm_library</run_depend>
  <run_depend>predicate_manager</run_depend>
  <run_depend>topological_tools</run_depend>
    
  <buildtool_depend>catkin</buildtool_depend>
</package>